[metadata]
name = router_service
summary = Router Service Manager
description-file = README.md
license =
author = jexf
version = 1.0.0
author-email =
home-page =
classifier =
    Environment :: router_service
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

paste.app_factory =
    version_service = router_service.version.service:version_app_factory
    service_v1 = router_service.version.service:v1_app_factory

[pastescript]
version = 1.0.0

[files]
packages =
    router_service
data_files =
    etc/router_service = etc/router_service/*

[entry_points]
console_scripts =
    router_service = router_service.cmd.manager:main


[wheel]
universal = 1

[pbr]
warnerrors = true